@@startuml Class diagram
/'  -fieldPrivate
    #fieldProtected
    +fieldPublic
'/

/'
note top of User: Base class
note top of Movie: Base class
'/

class User
{
    Fields
    --
    - String username;
    - String password;
    - HashMap<Movie, Integer> ratedMovies;
    ==
    Methods
    --
    +User()
    +User(String username, String password, HashMap<Movie, Integer> ratedMovies)
    +User(String username, String password)
    +String getUsername()
    +String getPassword()
    +HashMap<Movie, Integer> getRatedMovies()
    +void rateMovie(Movie movie, Integer myRating)
    +boolean hasRatedMovie(Movie movie)
    +String toString()
}
class UserRegister
{
    Fields
    --
    -List<User> users
    -UserHandler userHandler
    ==
    Methods
    --
    +void registerNewUser(User user)
    +List<User> getUsers()
    +User getUser(String username)
    +existingUser(String username, String password)
    -void updateUserList()
}
class UserHandler
{
    Fields
    --
    +{static} final String SAVE_FOLDER
    +{static} final String fileName
    ==
    Methods
    --
    -{static} File getFile()
    +void writeUserToRegister(User user)
    +List<User> readUsersFromRegister()
    +void updateRegister(User user)
    +boolean fileExists()


}
class Movie
{
    Fields
    --
    -String title
    -String genre
    -List<Integer> allRatings
    - {static} List<String> GENRES
    ==
    Methods
    --
    +Movie()
    +Movie(String title, String genre, List<Integer> allRatings)
    +Movie(String title, String genre, Integer rating)
    +Movie(String title, String genre)
    +String getTitle()
    +String getGenre()
    +List<Integer> getAllRatings()
    +void addRating(int rating)
    +double averageRating()
    +String toString()    
}
class MovieRegister
{
    Fields
    --
    -List<Movie> movies
    -MovieHandler handler
    ==
    Methods
    --
    +void addMovie(Movie movie)
    +void updateMovie(Movie movie)
    +List<Movie> searchGenre(String genre)
    +List<Movie> searchMovieTitle(String title)
    +Movie getMovie(String title, String genre)'
    +List<Movie> updateMovieList()
    -boolean movieExists(Movie movie)
}
class MovieHandler
{
    Fields
    --
    +{static} final String SAVE_FOLDER
    +{static} final String fileName
    ==
    Methods
    --
    +File getFile()
    +void writeMovieToRegister(Movie movie)
    +void updateMovieInRegister(Movie movie)
    +List<Movie> readMovieAndRatingFromRegister()
    +Boolean fileExists()
}

UserRegister "1..*" --|> "n..*" User : > Enables handling of \nusers to and from register
/': label 1'/
UserRegister "1..*" --|> "n..*" UserHandler  : > instruction read/write
UserHandler "1..*" --|> "n..*" User : > Saves and loads \nuser objects

Movie "n..*" <|-- "1..*" User : < watches
MovieRegister "1..*" --|> "n..*" MovieHandler : > instruction read/write
MovieHandler "1..*" --|> "n..*" Movie : > Saves and loads \numovie objects
MovieRegister "n..*" <|--  "1..*" UserRegister : < updates rating in movie register
MovieRegister "1..*" --|> "n..*" Movie : > Enables handling of \nmovies to and from register



@@enduml
